# asoptimus-commercial

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD-PLAN.md  INTEGRATION.md  LANDING-ADDITIONS.md  PRODUCT.md  README.md  SETUP-SUBMODULES.md
admin/: SPEC.md
admin/ui/: app.js  fixtures.json  index.html  styles.css
client/: NOTES.md  package.json  tsconfig.json
client/desktop/: .gitignore  package.json
client/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
client/desktop/src-tauri/capabilities/: default.json
client/desktop/src-tauri/icons/: icon.icns
client/desktop/src-tauri/src/: main.rs
client/src/: activation.ts  annotations.test.ts  annotations.ts  apple-exec.ts  build.ts  cloud-link.stub.ts  cloud-link.ts  config.ts  localserver.ts  main.ts  paths.ts  wire-local.ts
infra/: .env.example  .gitignore  README.md  backup.sh  docker-compose.yml
infra/caddy/: Caddyfile
infra/ci/: README.md  client-release.yml  server-ci.yml
infra/deploy/: fly.toml
scratch/: proof-of-address.txt
server/: .dockerignore  .env.example  .gitignore  Dockerfile  NOTES.md  README.md  package.json  tsconfig.json
server/scripts/: migrate-paddle-live.ts
server/src/: app.ts  config.ts  env.ts  integration.test.ts  log.ts  main.ts  replay.ts
shared/: package.json  tsconfig.json
shared/src/: constants.public.ts  index.ts  protocol.ts  (+2 more)
spec/: 00-overview.md  01-inputs-and-context.md  02-data-sources.md  03-metrics.md  04-pipeline.md  05-assembly.md  06-llm-adapters.md  07-web-ui.md  08-architecture.md  09-insights-and-exports.md
(+78 files in other folders)
